--- a/CourceProject/Components/Layout/NavMenu.razor
+++ b/CourceProject/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">CourceProject</a>
     </div>
@@ -14,13 +15,24 @@
             </NavLink>
         </div>
 
-      
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Authorization">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Авторизация
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Менеджер паролей">
+            <NavLink class="nav-link" href="Registration">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Регистрация
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="PasswordManager">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Менеджер паролей
             </NavLink>
         </div>
+
     </nav>
 </div>
 
