--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -1,67 +1,181 @@
 ﻿@using CourceProject.Components.Data
 @using CourceProject.Components.Models
+@using CourceProject.Components.Services
 @inject IUserRepository _listUsers
 @inject IAccountRepository _listAccounts
-@inject Blazored.LocalStorage.ILocalStorageService localStorage;
+@inject ProtectedSessionStorage localStorage;
+@inject NavigationManager navigationManager;
+@inject IEncryptor passwordEncryptor;
 @page "/PasswordManager"
 
 
-<PageTitle>@_pageTitle + @_listUsers.</PageTitle>
+@rendermode InteractiveServer
 
-<h1>Список аккаунтов</h1>
+<p> Менеджер паролей </p>
 
-<p>This component demonstrates showing data.</p>
-
-@if (_listAccounts.GetAccounts().Result.Count == null)
+@if (isConnected)
 {
-    <p><em>Loading...</em></p>
+    <p>@_pageTitle "@_nameUser"       userId - "@_userId"</p>
+
+        <h1>Список аккаунтов</h1>
+ 
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Ресурс</th> <th>Логин</th> <th>Пароль</th> <th>Показ пароля</th> <th>Смена пароля рандомно</th> <th>Длина смены пароля</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Account account in accounts)
+                {
+                    <tr>
+                        <td>@account.Source</td>
+                        <td>@account.Login</td>
+                        @if(flag && accountId==account.Id)
+                        {
+                            <td>@account.Password</td>
+                        }                    
+                        else
+                        {
+                            <td>@xxx</td>
+                        }
+                        <td>
+                            <button class="btn btn-primary" id="show" @onclick="(()=>ShowPassword(account))">Показать</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-primary" id="change" @onclick="(()=>Change(account,selectedNumber))">Сгенерировать новый пароль</button>
+                        </td>
+                        <td>
+                            <select @bind="selectedNumber">
+                            @for (int i = 6; i < 16; i++)
+                            {
+                                <option> @i</option>
+                            }
+                        </select>
+
+                        </td>
+                    </tr>
+                }
+                <tr>             
+                <td>
+                    <InputText @bind-Value=@_newAccount.Source />
+                </td>
+                <td>
+                    <InputText @bind-Value=@_newAccount.Login />
+                </td>
+                <td>
+                    <InputText @bind-Value=@_newAccount.Password />
+                </td>
+                <td></td>
+                <td>
+                    <button class="btn btn-primary" id="generate" @onclick="(()=>Generate(_newAccount,selectedNumber))">Сгенерировать пароль</button>
+                </td>
+                <td>
+                    <select @bind="selectedNumber">
+                        @for(int i=6; i<16; i++)
+                        {
+                            <option> @i</option>
+                        }            
+                    </select>
+                </td>                
+                </tr>           
+            </tbody>
+        </table>
+    <br />
+    <button class="btn btn-primary" id="show" @onclick="AddAccount">Добавить новый аккаунт</button>
+    <div> @error </div>
 }
 else
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Ресурс</th>
-                <th>Логин</th>
-                <th>Пароль</th>
-                <th>Показ</th>
-                <th>Смена</th>
-                <th>Длина</th>
-            </tr>
-        </thead>
-        <tbody>
-            
-            @for (int i = 0; i < _listAccounts.GetAccounts().Result.Count; i++)
-            {
-                <tr>
-                    <td>@_listAccounts.GetAccounts().[i]</td>
-                    <td>  </td>
-                    <td>
-                        <button>Сменить</button>
-                    </td>
-                    <td>
-                        <select> 
-                            <option> 4</option>
-                            <option> 5</option>
-                            <option> 6</option>
-                        </select>
-                        
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <p><em>Loading...</em></p>
 }
 
+
+
 @code {
-    private string _pageTitle = "Менеджер паролей";
-  
-    private async Task GetLocalStorage()
+    private string _pageTitle = "Вы вошли под пользователем ";
+    private int? _userId;
+    private string? _nameUser;
+    private IEnumerable<Account> accounts = new List<Account>();
+    private Account _newAccount = new();
+    private int? accountId;
+    private bool flag=false;
+    private string? xxx="*******";
+    private int selectedNumber;
+    private bool isConnected;
+    private string? error;
+    private string? encryptedPassword;
+    private string? decryptedPassword;
+    protected override async void OnInitialized()
     {
-        await localStorage.GetItemAsync<string>("userId");
+        accounts = await _listAccounts.GetAccounts();
+        accounts = accounts.Where(a => a.UserId == _userId);
+    }
+    private void ShowPassword(Account account)
+    {
+        flag = !flag;
+        if(flag)
+            account.Password = passwordEncryptor.Decrypt(account.Password);
+        else
+            account.Password = passwordEncryptor.Encrypt(account.Password);
+        accountId = account.Id;
+    }
+    private async void Change(Account account, int selectedNumber)
+    {
+        /*if (selectedNumber == 0)
+            selectedNumber = 8;
+        account.Password = GeneratePassword.Generate(selectedNumber);*/
+        Generate(account, selectedNumber);
+        await _listAccounts.UpdateAccount(account);
+    }
+    private void SelectedNumber(ChangeEventArgs args)
+    {
+        selectedNumber =Convert.ToInt32(args?.Value);
+    }
+
+    private async Task ReadLocalStorage()
+    {
+        var resultNameUser = await localStorage.GetAsync<string>("userName");
+        _nameUser = resultNameUser.Success ? resultNameUser.Value : null;
+        var resultUserId = await localStorage.GetAsync<int>("userId");
+        _userId = resultUserId.Success ? resultUserId.Value : null;
+    }
+    protected async override Task OnAfterRenderAsync(bool firstRender)
+    {
+        if(firstRender)
+        {
+            isConnected = true;
+            await ReadLocalStorage();
+            StateHasChanged();
+        }
+    }
+    private void Generate(Account _newAccount, int selectedNumber)
+    {
+        if (selectedNumber == 0)
+            selectedNumber = 8;
+        _newAccount.Password = GeneratePassword.Generate(selectedNumber);
+    }
+    private async void AddAccount()
+    {
+        
+        if (_newAccount.Source != null && _newAccount.Login != null && _newAccount.Password != null && _newAccount.Password.Length>5)
+        {
+            _newAccount = new()
+                {
+                    Source = _newAccount.Source,
+                    Login = _newAccount.Login,
+                    //Password = _newAccount.Password,
+                    Password = passwordEncryptor.Encrypt(_newAccount.Password),
+                    UserId = _userId
+                };
+            await _listAccounts.AddAccount(_newAccount);
+            _newAccount = new();
+            error = "Аккаунт успешно добавлен";
+            navigationManager.NavigateTo("/PasswordManager", true);
+        }
+        else
+            error = "Не все поля заполнены корректно, также проверьте чтобы пароль содержал не менее 6 символов";
         
     }
 
-
-    
 }
