--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -3,38 +3,50 @@
 @using CourceProject.Components.Services
 @inject IUserRepository _listUsers
 @inject IAccountRepository _listAccounts
-@inject ProtectedSessionStorage localStorage;
+@*@inject ProtectedSessionStorage localStorage;*@
+@inject Blazored.SessionStorage.ISessionStorageService localStorage;
 @inject NavigationManager navigationManager;
 @inject IEncryptor passwordEncryptor;
 @page "/PasswordManager"
 
-
 @rendermode InteractiveServer
 
 <p> Менеджер паролей </p>
-
 @if (isConnected)
 {
-    <p>@_pageTitle "@_nameUser"       userId - "@_userId"</p>
-
+    if (@_userId==0)
+    {
+        navigationManager.NavigateTo("/Authorization");
+    }
+    else
+    {
+        <p>@_pageTitle - "@_nameUser"</p>
+        <p>userId - "@_userId" </p>
         <h1>Список аккаунтов</h1>
- 
+        <br />
+        <button class="btn btn-primary" id="exit" @onclick="Exit">Выйти</button>
+        <br />
         <table class="table">
             <thead>
                 <tr>
-                    <th>Ресурс</th> <th>Логин</th> <th>Пароль</th> <th>Показ пароля</th> <th>Смена пароля рандомно</th> <th>Длина смены пароля</th>
+                    <th>Ресурс</th>
+                    <th>Логин</th>
+                    <th>Пароль</th>
+                    <th>Показ пароля</th>
+                    <th>Смена пароля рандомно</th>
+                    <th>Длина смены пароля</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (Account account in accounts)
                 {
-                    <tr>
+                    <tr>                      
                         <td>@account.Source</td>
                         <td>@account.Login</td>
-                        @if(flag && accountId==account.Id)
+                        @if (flag && accountId == account.Id)
                         {
                             <td>@account.Password</td>
-                        }                    
+                        }
                         else
                         {
                             <td>@xxx</td>
@@ -47,43 +59,44 @@
                         </td>
                         <td>
                             <select @bind="selectedNumber">
+                                @for (int i = 6; i < 16; i++)
+                                {
+                                    <option> @i</option>
+                                }
+                            </select>
+
+                        </td>
+                    </tr>
+                }
+                <tr>
+                    <td>
+                        <InputText @bind-Value=@_newAccount.Source />
+                    </td>
+                    <td>
+                        <InputText @bind-Value=@_newAccount.Login />
+                    </td>
+                    <td>
+                        <InputText @bind-Value=@_newAccount.Password />
+                    </td>
+                    <td></td>
+                    <td>
+                        <button class="btn btn-primary" id="generate" @onclick="(()=>Generate(_newAccount,selectedNumber))">Сгенерировать пароль</button>
+                    </td>
+                    <td>
+                        <select @bind="selectedNumber">
                             @for (int i = 6; i < 16; i++)
                             {
                                 <option> @i</option>
                             }
                         </select>
-
-                        </td>
-                    </tr>
-                }
-                <tr>             
-                <td>
-                    <InputText @bind-Value=@_newAccount.Source />
-                </td>
-                <td>
-                    <InputText @bind-Value=@_newAccount.Login />
-                </td>
-                <td>
-                    <InputText @bind-Value=@_newAccount.Password />
-                </td>
-                <td></td>
-                <td>
-                    <button class="btn btn-primary" id="generate" @onclick="(()=>Generate(_newAccount,selectedNumber))">Сгенерировать пароль</button>
-                </td>
-                <td>
-                    <select @bind="selectedNumber">
-                        @for(int i=6; i<16; i++)
-                        {
-                            <option> @i</option>
-                        }            
-                    </select>
-                </td>                
-                </tr>           
+                    </td>
+                </tr>
             </tbody>
         </table>
-    <br />
-    <button class="btn btn-primary" id="show" @onclick="AddAccount">Добавить новый аккаунт</button>
-    <div> @error </div>
+        <br />
+        <button class="btn btn-primary" id="show" @onclick="AddAccount">Добавить новый аккаунт</button>
+        <div> @error </div>
+    }
 }
 else
 {
@@ -114,17 +127,14 @@ else
     private void ShowPassword(Account account)
     {
         flag = !flag;
-        if(flag)
+        if (flag && account.Password.Length>16)
             account.Password = passwordEncryptor.Decrypt(account.Password);
-        else
+        if (!flag)
             account.Password = passwordEncryptor.Encrypt(account.Password);
         accountId = account.Id;
     }
     private async void Change(Account account, int selectedNumber)
     {
-        /*if (selectedNumber == 0)
-            selectedNumber = 8;
-        account.Password = GeneratePassword.Generate(selectedNumber);*/
         Generate(account, selectedNumber);
         await _listAccounts.UpdateAccount(account);
     }
@@ -132,13 +142,10 @@ else
     {
         selectedNumber =Convert.ToInt32(args?.Value);
     }
-
     private async Task ReadLocalStorage()
     {
-        var resultNameUser = await localStorage.GetAsync<string>("userName");
-        _nameUser = resultNameUser.Success ? resultNameUser.Value : null;
-        var resultUserId = await localStorage.GetAsync<int>("userId");
-        _userId = resultUserId.Success ? resultUserId.Value : null;
+        _nameUser = await localStorage.GetItemAsync<string>("userName");
+        _userId = await localStorage.GetItemAsync<int>("userId");
     }
     protected async override Task OnAfterRenderAsync(bool firstRender)
     {
@@ -153,18 +160,17 @@ else
     {
         if (selectedNumber == 0)
             selectedNumber = 8;
-        _newAccount.Password = GeneratePassword.Generate(selectedNumber);
+        _newAccount.Password = passwordEncryptor.Encrypt(GeneratePassword.Generate(selectedNumber));
+        error="Сгенерирован новый пароль"; 
     }
     private async void AddAccount()
-    {
-        
+    {        
         if (_newAccount.Source != null && _newAccount.Login != null && _newAccount.Password != null && _newAccount.Password.Length>5)
         {
             _newAccount = new()
                 {
                     Source = _newAccount.Source,
                     Login = _newAccount.Login,
-                    //Password = _newAccount.Password,
                     Password = passwordEncryptor.Encrypt(_newAccount.Password),
                     UserId = _userId
                 };
@@ -175,7 +181,10 @@ else
         }
         else
             error = "Не все поля заполнены корректно, также проверьте чтобы пароль содержал не менее 6 символов";
-        
     }
-
+    private async void Exit()
+    {
+        navigationManager.NavigateTo("/Authorization");
+        await localStorage.ClearAsync();
+    }
 }
